--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "loaders.css": "^0.1.2",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.14.0",
     "react-full-height": "^1.2.2",
     "react-metismenu": "^1.4.0",
     "react-metismenu-router-link": "^2.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0",
     "react-slick": "^0.27.12",
     "reactstrap": "^8.7.0",
     "redux": "^4.0.5",
