--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "animate-sass": "^0.8.2",
     "gatsby": "^2.24.91",
     "gatsby-plugin-react-redux": "^1.1.0",
@@ -36,7 +37,7 @@
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "webpack": "^5.3.2"
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
     "pe7-icon": "^1.0.4",
