--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@loadable/component": "^5.14.1",
     "animate-sass": "^0.8.2",
     "gatsby": "^2.24.91",
+    "gatsby-plugin-create-client-paths": "^2.3.13",
     "gatsby-plugin-react-redux": "^1.1.0",
     "gatsby-plugin-sass": "^2.3.22",
     "linearicons": "^1.0.2",
