--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "react-slick": "^0.27.12",
+    "react-toggle": "^4.1.1",
     "reactstrap": "^8.7.0",
     "redux": "^4.0.5",
     "redux-devtools": "^3.7.0",
