--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animate-sass": "^0.8.2",
     "gatsby": "^2.24.91",
     "gatsby-plugin-create-client-paths": "^2.3.13",
+    "gatsby-plugin-netlify": "^2.4.0",
     "gatsby-plugin-react-redux": "^1.1.0",
     "gatsby-plugin-sass": "^2.3.22",
     "linearicons": "^1.0.2",
