--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.14.0",
     "react-full-height": "^1.2.2",
+    "react-loadable": "^5.5.0",
     "react-metismenu": "^1.4.0",
     "react-metismenu-router-link": "^2.1.0",
     "react-redux": "^7.2.2",
